Adding command line interface with PicoCLI and binary generation (#7)
* Adding command line interface with PicoCLI and binary generation with GralVM

* Finishing CLI and binary